[package]
name = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"

clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-async-std-native-tls"] }
tera = "1.20.0"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
